Fallo en la vista de Admin arreglado